[gd_scene load_steps=11 format=3 uid="uid://caufal412q3qk"]

[ext_resource type="Script" uid="uid://cwhhanmpthajn" path="res://Scripts/SanboxScripts/sandbox.gd" id="1_62cd8"]
[ext_resource type="Texture2D" uid="uid://bubtpd0hdotqi" path="res://Assets/Tileset/Tileset_v3.png" id="2_62cd8"]
[ext_resource type="Texture2D" uid="uid://bp2nhnscsp41o" path="res://Assets/Cursor/default_object.png" id="3_0r1v2"]
[ext_resource type="Script" uid="uid://ixfakxeau86w" path="res://Scripts/SanboxScripts/default_object.gd" id="4_aox5q"]
[ext_resource type="Script" uid="uid://dda24cx7xxmwv" path="res://Scripts/SanboxScripts/delete_object.gd" id="5_qee5c"]
[ext_resource type="Texture2D" uid="uid://b1xkwj41oa1f6" path="res://Assets/Cursor/delete_object.png" id="6_ixw05"]
[ext_resource type="Texture2D" uid="uid://4rqgghfr1k30" path="res://Assets/Buttons and Dialogs/Button-back.png" id="7_4yamo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4yamo"]
texture = ExtResource("2_62cd8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
18:11/0 = 0
19:11/0 = 0
18:12/0 = 0
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
0:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0

[sub_resource type="TileSet" id="TileSet_0r1v2"]
sources/0 = SubResource("TileSetAtlasSource_4yamo")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrb1b"]
size = Vector2(15.5, 15.5)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_62cd8")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_0r1v2")
format = 2
layer_0/tile_data = PackedInt32Array(-655378, 0, 0, -589842, 0, 1, -655377, 65536, 0, -589841, 65536, 1, -524306, 0, 0, -458770, 0, 1, -524305, 65536, 0, -458769, 65536, 1, -393234, 0, 0, -327698, 0, 1, -393233, 65536, 0, -327697, 65536, 1, -262162, 0, 0, -196626, 0, 1, -262161, 65536, 0, -196625, 65536, 1, -131090, 0, 0, -65554, 0, 1, -131089, 65536, 0, -65553, 65536, 1, -18, 0, 0, 65518, 0, 1, -17, 65536, 0, 65519, 65536, 1, 131054, 0, 0, 196590, 0, 1, 131055, 65536, 0, 196591, 65536, 1, 262126, 0, 0, 327662, 0, 1, 262127, 65536, 0, 327663, 65536, 1, 393198, 0, 0, 458734, 0, 1, 393199, 65536, 0, 458735, 65536, 1, 524270, 0, 0, 589806, 0, 1, 524271, 65536, 0, 589807, 65536, 1, 655342, 0, 0, 655343, 65536, 0, -655376, 0, 0, -589840, 0, 1, -655375, 65536, 0, -589839, 65536, 1, -524304, 0, 0, -458768, 0, 1, -524303, 65536, 0, -458767, 65536, 1, -393232, 0, 0, -327696, 0, 1, -393231, 65536, 0, -327695, 65536, 1, -262160, 0, 0, -196624, 0, 1, -262159, 65536, 0, -196623, 65536, 1, -131088, 0, 0, -65552, 0, 1, -131087, 65536, 0, -65551, 65536, 1, -16, 0, 0, 65520, 0, 1, -15, 65536, 0, 65521, 65536, 1, 131056, 0, 0, 196592, 0, 1, 131057, 65536, 0, 196593, 65536, 1, 262128, 0, 0, 327664, 0, 1, 262129, 65536, 0, 327665, 65536, 1, 393200, 0, 0, 458736, 0, 1, 393201, 65536, 0, 458737, 65536, 1, 524272, 0, 0, 589808, 0, 1, 524273, 65536, 0, 589809, 65536, 1, 655344, 0, 0, 655345, 65536, 0, -655374, 0, 0, -589838, 0, 1, -655373, 65536, 0, -589837, 65536, 1, -524302, 0, 0, -458766, 0, 1, -524301, 65536, 0, -458765, 65536, 1, -393230, 0, 0, -327694, 0, 1, -393229, 65536, 0, -327693, 65536, 1, -262158, 0, 0, -196622, 0, 1, -262157, 65536, 0, -196621, 65536, 1, -131086, 0, 0, -65550, 0, 1, -131085, 65536, 0, -65549, 65536, 1, -14, 0, 0, 65522, 0, 1, -13, 65536, 0, 65523, 65536, 1, 131058, 0, 0, 196594, 65536, 13, 131059, 65536, 0, 196595, 65536, 13, 262130, 0, 0, 327666, 0, 1, 262131, 65536, 0, 327667, 65536, 1, 393202, 0, 0, 458738, 0, 1, 393203, 65536, 0, 458739, 65536, 1, 524274, 0, 0, 589810, 0, 1, 524275, 65536, 0, 589811, 65536, 1, 655346, 0, 0, 655347, 65536, 0, -655372, 0, 0, -589836, 0, 1, -655371, 65536, 0, -589835, 65536, 1, -524300, 0, 0, -458764, 0, 1, -524299, 65536, 0, -458763, 65536, 1, -393228, 0, 0, -327692, 0, 1, -393227, 65536, 0, -327691, 65536, 1, -262156, 0, 0, -196620, 0, 1, -262155, 65536, 0, -196619, 65536, 1, -131084, 0, 0, -65548, 0, 1, -131083, 65536, 0, -65547, 65536, 1, -12, 0, 0, 65524, 0, 1, -11, 65536, 0, 65525, 65536, 1, 131060, 0, 0, 196596, 65536, 13, 131061, 65536, 0, 196597, 65536, 13, 262132, 0, 0, 327668, 0, 1, 262133, 65536, 0, 327669, 65536, 1, 393204, 0, 0, 458740, 0, 1, 393205, 65536, 0, 458741, 65536, 1, 524276, 0, 0, 589812, 0, 1, 524277, 65536, 0, 589813, 65536, 1, 655348, 0, 0, 655349, 65536, 0, -655370, 0, 0, -589834, 0, 1, -655369, 65536, 0, -589833, 65536, 1, -524298, 0, 0, -458762, 0, 1, -524297, 65536, 0, -458761, 65536, 1, -393226, 0, 0, -327690, 0, 1, -393225, 65536, 0, -327689, 65536, 1, -262154, 0, 0, -196618, 0, 1, -262153, 65536, 0, -196617, 65536, 1, -131082, 0, 0, -65546, 0, 1, -131081, 65536, 0, -65545, 65536, 1, -10, 0, 0, 65526, 0, 1, -9, 65536, 0, 65527, 65536, 1, 131062, 0, 0, 196598, 65536, 13, 131063, 65536, 0, 196599, 65536, 13, 262134, 0, 0, 327670, 0, 1, 262135, 65536, 0, 327671, 65536, 1, 393206, 0, 0, 458742, 0, 1, 393207, 65536, 0, 458743, 65536, 1, 524278, 0, 0, 589814, 0, 1, 524279, 65536, 0, 589815, 65536, 1, 655350, 0, 0, 655351, 65536, 0, -655368, 0, 0, -589832, 0, 1, -655367, 65536, 0, -589831, 65536, 1, -524296, 0, 0, -458760, 0, 1, -524295, 65536, 0, -458759, 65536, 1, -393224, 0, 0, -327688, 0, 1, -393223, 65536, 0, -327687, 65536, 1, -262152, 0, 0, -196616, 0, 1, -262151, 65536, 0, -196615, 65536, 1, -131080, 0, 0, -65544, 0, 1, -131079, 65536, 0, -65543, 65536, 1, -8, 0, 0, 65528, 0, 1, -7, 65536, 0, 65529, 65536, 1, 131064, 0, 0, 196600, 65536, 13, 131065, 65536, 0, 196601, 65536, 13, 262136, 0, 0, 327672, 0, 1, 262137, 65536, 0, 327673, 65536, 1, 393208, 0, 0, 458744, 0, 1, 393209, 65536, 0, 458745, 65536, 1, 524280, 0, 0, 589816, 0, 1, 524281, 65536, 0, 589817, 65536, 1, 655352, 0, 0, 655353, 65536, 0, -655366, 0, 0, -589830, 0, 1, -655365, 65536, 0, -589829, 65536, 1, -524294, 0, 0, -458758, 0, 1, -524293, 65536, 0, -458757, 65536, 1, -393222, 0, 0, -327686, 0, 1, -393221, 65536, 0, -327685, 65536, 1, -262150, 0, 0, -196614, 0, 1, -262149, 65536, 0, -196613, 65536, 1, -131078, 0, 0, -65542, 0, 1, -131077, 65536, 0, -65541, 65536, 1, -6, 0, 0, 65530, 0, 1, -5, 65536, 0, 65531, 65536, 1, 131066, 0, 0, 196602, 65536, 13, 131067, 65536, 0, 196603, 65536, 13, 262138, 0, 0, 327674, 0, 1, 262139, 65536, 0, 327675, 65536, 1, 393210, 0, 0, 458746, 0, 1, 393211, 65536, 0, 458747, 65536, 1, 524282, 0, 0, 589818, 0, 1, 524283, 65536, 0, 589819, 65536, 1, 655354, 0, 0, 655355, 65536, 0, -655364, 0, 0, -589828, 0, 1, -655363, 65536, 0, -589827, 65536, 1, -524292, 0, 0, -458756, 0, 1, -524291, 65536, 0, -458755, 65536, 1, -393220, 0, 0, -327684, 0, 1, -393219, 65536, 0, -327683, 65536, 1, -262148, 0, 0, -196612, 0, 1, -262147, 65536, 0, -196611, 65536, 1, -131076, 0, 0, -65540, 0, 1, -131075, 65536, 0, -65539, 65536, 1, -4, 0, 0, 65532, 0, 1, -3, 65536, 0, 65533, 65536, 1, 131068, 0, 0, 196604, 65536, 13, 131069, 65536, 0, 196605, 65536, 13, 262140, 0, 0, 327676, 0, 1, 262141, 65536, 0, 327677, 65536, 1, 393212, 0, 0, 458748, 0, 1, 393213, 65536, 0, 458749, 65536, 1, 524284, 0, 0, 589820, 0, 1, 524285, 65536, 0, 589821, 65536, 1, 655356, 0, 0, 655357, 65536, 0, -655362, 0, 0, -589826, 0, 1, -655361, 65536, 0, -589825, 65536, 1, -524290, 0, 0, -458754, 0, 1, -524289, 65536, 0, -458753, 65536, 1, -393218, 0, 0, -327682, 0, 1, -393217, 65536, 0, -327681, 65536, 1, -262146, 0, 0, -196610, 0, 1, -262145, 65536, 0, -196609, 65536, 1, -131074, 0, 0, -65538, 0, 1, -131073, 65536, 0, -65537, 65536, 1, -2, 0, 0, 65534, 0, 1, -1, 65536, 0, 65535, 65536, 1, 131070, 0, 0, 196606, 65536, 13, 131071, 65536, 0, 196607, 65536, 13, 262142, 0, 0, 327678, 0, 1, 262143, 65536, 0, 327679, 65536, 1, 393214, 0, 0, 458750, 0, 1, 393215, 65536, 0, 458751, 65536, 1, 524286, 0, 0, 589822, 0, 1, 524287, 65536, 0, 589823, 65536, 1, 655358, 0, 0, 655359, 65536, 0, -720896, 0, 0, -655360, 0, 1, -720895, 65536, 0, -655359, 65536, 1, -589824, 0, 0, -524288, 0, 1, -589823, 65536, 0, -524287, 65536, 1, -458752, 0, 0, -393216, 0, 1, -458751, 65536, 0, -393215, 65536, 1, -327680, 0, 0, -262144, 0, 1, -327679, 65536, 0, -262143, 65536, 1, -196608, 0, 0, -131072, 0, 1, -196607, 65536, 0, -131071, 65536, 1, -65536, 0, 0, 0, 0, 1, -65535, 65536, 0, 1, 65536, 1, 65536, 0, 0, 131072, 65536, 13, 65537, 65536, 0, 131073, 65536, 13, 196608, 0, 0, 262144, 0, 1, 196609, 65536, 0, 262145, 65536, 1, 327680, 0, 0, 393216, 0, 1, 327681, 65536, 0, 393217, 65536, 1, 458752, 0, 0, 524288, 0, 1, 458753, 65536, 0, 524289, 65536, 1, 589824, 0, 0, 589825, 65536, 0, -720894, 0, 0, -655358, 0, 1, -720893, 65536, 0, -655357, 65536, 1, -589822, 0, 0, -524286, 0, 1, -589821, 65536, 0, -524285, 65536, 1, -458750, 0, 0, -393214, 0, 1, -458749, 65536, 0, -393213, 65536, 1, -327678, 0, 0, -262142, 0, 1, -327677, 65536, 0, -262141, 65536, 1, -196606, 0, 0, -131070, 0, 1, -196605, 65536, 0, -131069, 65536, 1, -65534, 0, 0, 2, 0, 1, -65533, 65536, 0, 3, 65536, 1, 65538, 0, 0, 131074, 65536, 13, 65539, 65536, 0, 131075, 65536, 13, 196610, 0, 0, 262146, 0, 1, 196611, 65536, 0, 262147, 65536, 1, 327682, 0, 0, 393218, 0, 1, 327683, 65536, 0, 393219, 65536, 1, 458754, 0, 0, 524290, 0, 1, 458755, 65536, 0, 524291, 65536, 1, 589826, 0, 0, 589827, 65536, 0, -720892, 0, 0, -655356, 0, 1, -720891, 65536, 0, -655355, 65536, 1, -589820, 0, 0, -524284, 0, 1, -589819, 65536, 0, -524283, 65536, 1, -458748, 0, 0, -393212, 0, 1, -458747, 65536, 0, -393211, 65536, 1, -327676, 0, 0, -262140, 0, 1, -327675, 65536, 0, -262139, 65536, 1, -196604, 0, 0, -131068, 0, 1, -196603, 65536, 0, -131067, 65536, 1, -65532, 0, 0, 4, 0, 1, -65531, 65536, 0, 5, 65536, 1, 65540, 0, 0, 131076, 65536, 13, 65541, 65536, 0, 131077, 65536, 13, 196612, 0, 0, 262148, 0, 1, 196613, 65536, 0, 262149, 65536, 1, 327684, 0, 0, 393220, 0, 1, 327685, 65536, 0, 393221, 65536, 1, 458756, 0, 0, 524292, 0, 1, 458757, 65536, 0, 524293, 65536, 1, 589828, 0, 0, 589829, 65536, 0, -720890, 0, 0, -655354, 0, 1, -720889, 65536, 0, -655353, 65536, 1, -589818, 0, 0, -524282, 0, 1, -589817, 65536, 0, -524281, 65536, 1, -458746, 0, 0, -393210, 0, 1, -458745, 65536, 0, -393209, 65536, 1, -327674, 0, 0, -262138, 0, 1, -327673, 65536, 0, -262137, 65536, 1, -196602, 0, 0, -131066, 0, 1, -196601, 65536, 0, -131065, 65536, 1, -65530, 0, 0, 6, 0, 1, -65529, 65536, 0, 7, 65536, 1, 65542, 0, 0, 131078, 65536, 13, 65543, 65536, 0, 131079, 65536, 13, 196614, 0, 0, 262150, 0, 1, 196615, 65536, 0, 262151, 65536, 1, 327686, 0, 0, 393222, 0, 1, 327687, 65536, 0, 393223, 65536, 1, 458758, 0, 0, 524294, 0, 1, 458759, 65536, 0, 524295, 65536, 1, 589830, 0, 0, 589831, 65536, 0, -720888, 0, 0, -655352, 0, 1, -720887, 65536, 0, -655351, 65536, 1, -589816, 0, 0, -524280, 0, 1, -589815, 65536, 0, -524279, 65536, 1, -458744, 0, 0, -393208, 0, 1, -458743, 65536, 0, -393207, 65536, 1, -327672, 0, 0, -262136, 0, 1, -327671, 65536, 0, -262135, 65536, 1, -196600, 0, 0, -131064, 0, 1, -196599, 65536, 0, -131063, 65536, 1, -65528, 0, 0, 8, 0, 1, -65527, 65536, 0, 9, 65536, 1, 65544, 0, 0, 131080, 65536, 13, 65545, 65536, 0, 131081, 65536, 13, 196616, 0, 0, 262152, 0, 1, 196617, 65536, 0, 262153, 65536, 1, 327688, 0, 0, 393224, 0, 1, 327689, 65536, 0, 393225, 65536, 1, 458760, 0, 0, 524296, 0, 1, 458761, 65536, 0, 524297, 65536, 1, 589832, 0, 0, 589833, 65536, 0, -720886, 0, 0, -655350, 0, 1, -720885, 65536, 0, -655349, 65536, 1, -589814, 0, 0, -524278, 0, 1, -589813, 65536, 0, -524277, 65536, 1, -458742, 0, 0, -393206, 0, 1, -458741, 65536, 0, -393205, 65536, 1, -327670, 0, 0, -262134, 0, 1, -327669, 65536, 0, -262133, 65536, 1, -196598, 0, 0, -131062, 0, 1, -196597, 65536, 0, -131061, 65536, 1, -65526, 0, 0, 10, 0, 1, -65525, 65536, 0, 11, 65536, 1, 65546, 0, 0, 131082, 65536, 13, 65547, 65536, 0, 131083, 65536, 13, 196618, 0, 0, 262154, 0, 1, 196619, 65536, 0, 262155, 65536, 1, 327690, 0, 0, 393226, 0, 1, 327691, 65536, 0, 393227, 65536, 1, 458762, 0, 0, 524298, 0, 1, 458763, 65536, 0, 524299, 65536, 1, 589834, 0, 0, 589835, 65536, 0, -720884, 0, 0, -655348, 0, 1, -720883, 65536, 0, -655347, 65536, 1, -589812, 0, 0, -524276, 0, 1, -589811, 65536, 0, -524275, 65536, 1, -458740, 0, 0, -393204, 0, 1, -458739, 65536, 0, -393203, 65536, 1, -327668, 0, 0, -262132, 0, 1, -327667, 65536, 0, -262131, 65536, 1, -196596, 0, 0, -131060, 0, 1, -196595, 65536, 0, -131059, 65536, 1, -65524, 0, 0, 12, 0, 1, -65523, 65536, 0, 13, 65536, 1, 65548, 0, 0, 131084, 65536, 13, 65549, 65536, 0, 131085, 65536, 1, 196620, 0, 0, 262156, 0, 1, 196621, 65536, 0, 262157, 65536, 1, 327692, 0, 0, 393228, 0, 1, 327693, 65536, 0, 393229, 65536, 1, 458764, 0, 0, 524300, 0, 1, 458765, 65536, 0, 524301, 65536, 1, 589836, 0, 0, 589837, 65536, 0, -720882, 0, 0, -655346, 0, 1, -720881, 65536, 0, -655345, 65536, 1, -589810, 0, 0, -524274, 0, 1, -589809, 65536, 0, -524273, 65536, 1, -458738, 0, 0, -393202, 0, 1, -458737, 65536, 0, -393201, 65536, 1, -327666, 0, 0, -262130, 0, 1, -327665, 65536, 0, -262129, 65536, 1, -196594, 0, 0, -131058, 0, 1, -196593, 65536, 0, -131057, 65536, 1, -65522, 0, 0, 14, 0, 1, -65521, 65536, 0, 15, 65536, 1, 65550, 0, 0, 131086, 0, 1, 65551, 65536, 0, 131087, 65536, 1, 196622, 0, 0, 262158, 0, 1, 196623, 65536, 0, 262159, 65536, 1, 327694, 0, 0, 393230, 0, 1, 327695, 65536, 0, 393231, 65536, 1, 458766, 0, 0, 524302, 0, 1, 458767, 65536, 0, 524303, 65536, 1, 589838, 0, 0, 589839, 65536, 0, -720880, 0, 0, -655344, 0, 1, -720879, 65536, 0, -655343, 65536, 1, -589808, 0, 0, -524272, 0, 1, -589807, 65536, 0, -524271, 65536, 1, -458736, 0, 0, -393200, 0, 1, -458735, 65536, 0, -393199, 65536, 1, -327664, 0, 0, -262128, 0, 1, -327663, 65536, 0, -262127, 65536, 1, -196592, 0, 0, -131056, 0, 1, -196591, 65536, 0, -131055, 65536, 1, -65520, 0, 0, 16, 0, 1, -65519, 65536, 0, 17, 65536, 1, 65552, 0, 0, 131088, 0, 1, 65553, 65536, 0, 131089, 65536, 1, 196624, 0, 0, 262160, 0, 1, 196625, 65536, 0, 262161, 65536, 1, 327696, 0, 0, 393232, 0, 1, 327697, 65536, 0, 393233, 65536, 1, 458768, 0, 0, 524304, 0, 1, 458769, 65536, 0, 524305, 65536, 1, 589840, 0, 0, 589841, 65536, 0)

[node name="Houses" type="Node2D" parent="."]

[node name="Stations" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)

[node name="ConstantObject" type="Node2D" parent="."]

[node name="DefaultObject" type="Sprite2D" parent="ConstantObject"]
texture = ExtResource("3_0r1v2")
script = ExtResource("4_aox5q")

[node name="ObjectDeleter" type="Area2D" parent="ConstantObject"]
script = ExtResource("5_qee5c")

[node name="DeleteDesign" type="Sprite2D" parent="ConstantObject/ObjectDeleter"]
texture = ExtResource("6_ixw05")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConstantObject/ObjectDeleter"]
visible = false
shape = SubResource("RectangleShape2D_rrb1b")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="BackButton" type="TextureButton" parent="UI"]
layout_mode = 0
offset_left = -256.0
offset_top = -154.0
offset_right = -151.0
offset_bottom = -59.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("7_4yamo")
ignore_texture_size = true
stretch_mode = 0

[connection signal="area_entered" from="ConstantObject/ObjectDeleter" to="ConstantObject/ObjectDeleter" method="_on_area_entered"]
[connection signal="area_exited" from="ConstantObject/ObjectDeleter" to="ConstantObject/ObjectDeleter" method="_on_area_exited"]
[connection signal="pressed" from="UI/BackButton" to="." method="_on_back_button_pressed"]
